[package]
name = "judge-server"
version = "0.1.0"
authors = ["Southball <jamie.choi.mail.2002@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
clap = { git = "https://github.com/clap-rs/clap/" }
log = "0.4"
simplelog = "0.7.4"
actix-web = "2.0"
actix-rt = "1.0"
actix-http = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
