[package]
name = "judge-server"
version = "0.1.0"
authors = ["Southball <jamie.choi.mail.2002@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "1.0.1"
actix-rt = "1.0"
actix-web = "2.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { git = "https://github.com/clap-rs/clap/" }
data-encoding = "2.2"
diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
jsonwebtoken = "7"
judge-definitions = { git = "https://github.com/southball/judge-definitions" }
log = "0.4"
ring = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.7.4"